--- a/index.html
+++ b/index.html
@@ -9,9 +9,26 @@
 </head>
 <body>
     <h1>A Lot Of Flash Games</h1>
+    <fieldset>
+        <legend>Gun Mayhem Games</legend>
     <a href="gun1.html" target="_blank">Gun Mayhem 1</a>
     <br><br>
     <a href="gun2.html" target="_blank">Gun Mayhem 2</a>
+    </fieldset>
+    <fieldset>
+        <legend>Escape Games</legend>
+        <a target="_blank" href="escape-the-car.html">Escape The Car</a>
+        <br><br>
+        <a target="_blank" href="escape-the-bathroom.html">Escape The Bathroom</a>
+        <br><br>
+        <a target="_blank" href="escape-the-closet.html">Escape The Closet</a>
+    </fieldset>
+    <fieldset>
+        <legend>Impossible Quiz Games</legend>
+        <a target="_blank" href="imp-quiz-1.html">Impossible Quiz 1</a>
+        <br><br>
+        <a target="_blank" href="imp-quiz-2.html">Impossible Quiz 2</a>
+    </fieldset>
     </script>
 </body>
 </html>
