--- a/gun1.html
+++ b/gun1.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gun Mayhem 2</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Gun Mayhem 1</title>
 </head>
 <body>
     <div id="ruffle"></div>
+    <a href="index.html">Home Page</a>
     <script src="ruffle/ruffle.js"></script>
     <script>
         var swfobject = {};
