Adding More Later

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
         <br><br>
         <a target="_blank" href="imp-quiz-2.html">Impossible Quiz 2</a>
     </fieldset>
+    <fieldset>
+        <legend>Achilles</legend>
+        <a target="_blank" href="achilles.html">Achilles</a>
+    </fieldset>
+    <fieldset>
+        <legend>Achievement Unlocked</legend>
+        <a target="_blank" href="ach-unlocked.html">Achievement Unlocked</a>
+    </fieldset>
+    <fieldset>
+    <legend>Effing Worms</legend>
+    <a target='_blank' href='ef-worms.html'>Effing Worms</a>
+    </fieldset>
     </script>
 </body>
 </html>
