--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
 <body>
     <h1>A Lot Of Flash Games</h1>
     <fieldset>
+    <legend>Riddle School Series</legend>
+    <a target='_blank' href='rid1.html'>Riddle School 1</a>
+    <br><br>
+    <a target='_blank' href='rid2.html'>Riddle School 2</a>
+    <br><br>
+    <a target='_blank' href='rid3.html'>Riddle School 3</a>
+    <br><br>
+    <a target='_blank' href='rid4.html'>Riddle School 4</a>
+    <br><br>
+    <a target='_blank' href='rid5.html'>Riddle School 5</a>
+    <br><br>
+    <a target='_blank' href='ridTr.html'>Riddle Transfer</a>
+    <br><br>
+    <a target='_blank' href='ridTr2.html'>Riddle Transfer 2</a>
+    </fieldset>
+    <fieldset>
+    <legend>Duck Life Games</legend>
+    <a target='_blank' href='d1.html'>Duck Life 1</a>
+    <br><br>
+    <a target='_blank' href='d2.html'>Duck Life 2</a>
+    <br><br>
+    <a target='_blank' href='d3.html'>Duck Life 3</a>
+    <br><br>
+    <a target='_blank' href='d4.html'>Duck Life 4</a>
+    </fieldset>
+    <fieldset>
         <legend>Gun Mayhem Games</legend>
     <a href="gun1.html" target="_blank">Gun Mayhem 1</a>
     <br><br>
@@ -33,6 +59,7 @@
         <legend>Achilles</legend>
         <a target="_blank" href="achilles.html">Achilles</a>
     </fieldset>
+    <br><br>
     <fieldset>
         <legend>Achievement Unlocked</legend>
         <a target="_blank" href="ach-unlocked.html">Achievement Unlocked</a>
@@ -41,6 +68,19 @@
     <legend>Effing Worms</legend>
     <a target='_blank' href='ef-worms.html'>Effing Worms</a>
     </fieldset>
+    <fieldset>
+    <legend>13 Days In Hell</legend>
+    <a target='_blank' href='13days.html'>13 Days In Hell</a>
+    </fieldset>
+    <fieldset>
+    <legend>Blast O Matic</legend>
+    <a target='_blank' href='blast.html'>Blast-O-Matic</a>
+    </fieldset>
+    <fieldset>
+    <legend>Defend Your Castle</legend>
+    <a target='_blank' href='def.html'>Defend Your Castle</a>
+    </fieldset>
+    
     </script>
 </body>
 </html>
