--- a/index.html
+++ b/index.html
@@ -80,7 +80,30 @@
     <legend>Defend Your Castle</legend>
     <a target='_blank' href='def.html'>Defend Your Castle</a>
     </fieldset>
-    
+    <fieldset>
+    <legend>Action Turnip</legend>
+    <a target='_blank' href='acTur.html'>Action Turnip</a>
+    </fieldset>
+    <fieldset>
+    <legend>Burger Tycoon</legend>
+    <a target='_blank' href='burty.html'>Burger Tycoon</a>
+    </fieldset>
+    <fieldset>
+    <legend>Grow RPG</legend>
+    <a target='_blank' href='grow.html'>Grow RPG</a>
+    </fieldset>
+    <fieldset>
+    <legend>Papa's Game</legend>
+    <a target='_blank' href='pazi.html'>Papa's pizzeria</a>
+    </fieldset>
+    <fieldset>
+    <legend>Portal The Flash Version</legend>
+    <a target='_blank' href='prtlflsh.html'>Portal The Flash Version</a>
+    </fieldset>
+    <fieldset>
+    <legend>Learn To Fly</legend>
+    <a target='_blank' href='ltf.html'>Learn To Fly</a>
+    </fieldset>
     </script>
 </body>
 </html>
